@@ -1,5 +1,14 @@
 2007-07-28  H.J. Lu  <hongjiu.lu@intel.com>
 
+	PR binutils/4835
+	* i386-dis.c (Eq): New.
+	(EMC): Renamed to ...
+	(EMCq): This.  Use q_mode instead of v_mode.
+	(prefix_user_table): Updated to use EXd, EXq, EMCq, Ed and Eq
+	when appropriated.
+
+2007-07-28  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* i386-dis.c (dis386_twobyte): Change "movd" to "movK".
 	(prefix_user_table): Likewise.  Use EXq instead of EXx on
 	"movq".
