@@ -1,5 +1,16 @@
 2007-07-28  H.J. Lu  <hongjiu.lu@intel.com>
 
+	PR binutils/4835
+	* gas/i386/simd-intel.d: Updated.
+	* gas/i386/simd.d: Likewise.
+	* gas/i386/x86-64-simd-intel.d: Likewise.
+	* gas/i386/x86-64-simd.d: Likewise.
+
+	* gas/i386/simd.s: Add new tests.
+	* gas/i386/x86-64-simd.s: Likewise.
+
+2007-07-28  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* gas/i386/x86-64-opcode.d: Updated.
 	* gas/i386/x86-64-simd-intel.d: Likewise.
 	* gas/i386/x86-64-simd.d: Likewise.
